# mazegame

./: .editorconfig  CMakeLists.txt  LICENSE.txt  README.md
src/: CMakeLists.txt  io.h  io_curses.cc  io_sdl.cc  main.cc  maze.cc  maze.h
